--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"@emotion/styled": "^11.14.0",
 		"@mui/material": "^6.4.4",
 		"@sanity/vision": "^3.75.0",
-		"@supabase/supabase-js": "^2.48.1",
+		"@supabase/auth-helpers-nextjs": "^0.10.0",
+		"@supabase/supabase-js": "^2.49.4",
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"jsonwebtoken": "^9.0.2",
@@ -26,6 +27,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-icons": "^5.3.0",
+		"react-toastify": "^11.0.5",
 		"remove-accents": "^0.5.0",
 		"sanity": "^3.75.0",
 		"sharp": "^0.33.5",
