--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@mui/material": "^7.0.2",
 		"@supabase/auth-helpers-nextjs": "^0.10.0",
 		"@supabase/ssr": "^0.6.1",
+		"@vercel/analytics": "^1.5.0",
+		"@vercel/speed-insights": "^1.2.0",
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"next": "^15.3.1",
