--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
 		"@biomejs/biome": "^1.9.4",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
+		"@mui/icons-material": "^7.0.2",
 		"@mui/material": "^7.0.2",
+		"@mui/x-date-pickers": "^8.0.0-beta.3",
 		"@supabase/auth-helpers-nextjs": "^0.10.0",
 		"@supabase/ssr": "^0.6.1",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.13",
+		"dayjs-plugin-utc": "^0.1.2",
 		"next": "^15.3.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
