--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
 		"@biomejs/biome": "^1.9.4",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
+		"@fullcalendar/daygrid": "^6.1.17",
+		"@fullcalendar/interaction": "^6.1.17",
+		"@fullcalendar/list": "^6.1.17",
+		"@fullcalendar/react": "^6.1.17",
+		"@fullcalendar/timegrid": "^6.1.17",
 		"@mui/icons-material": "^7.0.2",
 		"@mui/material": "^7.0.2",
 		"@mui/x-date-pickers": "^8.0.0-beta.3",
