--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"dayjs-plugin-utc": "^0.1.2",
+		"framer-motion": "^12.9.4",
 		"next": "^15.3.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
